syntax = "proto3";

package where_child_bus.v1;

import "where_child_bus/v1/resources.proto";
import "google/protobuf/field_mask.proto";

service GuardianService {
        rpc CreateGuardian(CreateGuardianRequest) returns (CreateGuardianResponse);
        rpc GuardianLogin(GuardianLoginRequest) returns (GuardianLoginResponse);
        rpc GetGuardianListByBusId(GetGuardianListByBusIdRequest) returns (GetGuardianListByBusIdResponse);
        rpc GetGuardianByChildId(GetGuardianByChildIdRequest) returns (GetGuardianByChildIdResponse);
        rpc GetGuardianListByNurseryId(GetGuardianListByNurseryIdRequest) returns (GetGuardianListByNurseryIdResponse);
        rpc UpdateGuardian(UpdateGuardianRequest) returns (UpdateGuardianResponse);
}

message CreateGuardianRequest {
        string nursery_code = 1;
        string email = 2;
        string password = 3;
        string name = 4;
        string phone_number = 5;
}

message CreateGuardianResponse{
        GuardianResponse guardian = 1;
}

message GuardianLoginRequest {
        string email = 1;
        string password = 2;
}

message GuardianLoginResponse {
        bool success = 1;
        GuardianResponse guardian = 2;
        NurseryResponse nursery = 3;
}

message GetGuardianListByBusIdRequest {
        string bus_id = 1;
}

message GetGuardianListByBusIdResponse {
        repeated GuardianResponse guardians = 1;
}

message GetGuardianByChildIdRequest {
        string child_id = 1;
}

message GetGuardianByChildIdResponse {
        GuardianResponse guardian = 1;
}

message GetGuardianListByNurseryIdRequest {
        string nursery_id = 1;
}

message GetGuardianListByNurseryIdResponse {
        repeated GuardianResponse guardians = 1;
}

message UpdateGuardianRequest {
        string guardian_id = 1;
        string name = 2;
        string email = 3;
        string phone_number = 4;
        bool is_use_morning_bus = 5;
        bool is_use_evening_bus = 6;
        google.protobuf.FieldMask update_mask = 11;
}

message UpdateGuardianResponse {
        GuardianResponse guardian = 1;
}
